--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
 aiofiles==0.7.0
+anyio==3.3.0
+async-generator==1.10
+async-timeout==3.0.1
+attrs==21.2.0
 ConfigArgParse==1.5.2
+decorator==5.0.9
+idna==3.2
+outcome==1.1.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
 tk==0.1.0
+trio==0.19.0
